--- a/namate-dev-assignment/src/index.html
+++ b/namate-dev-assignment/src/index.html
@@ -10,8 +10,6 @@
     <h1>Rendered Using HTML</h1>
     <div id="rootJs"></div>
     <div id="root"></div>
-    <script src="https://unpkg.com/react@18/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js" crossorigin></script>
-    <script src="./index.js"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
