--- a/namate-dev-assignment/public/index.html
+++ b/namate-dev-assignment/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Namste-React-Day-1-Assignment</title>
+    <title>Namste-React</title>
+    <link rel="icon" type="image/png" href="./assets/favicon.png"/>
 </head>
 <body>
     <div id="root"></div>
