--- a/namate-dev-assignment/public/index.html
+++ b/namate-dev-assignment/public/index.html
@@ -7,7 +7,7 @@
     <title>Namste-React</title>
     <link rel="icon" type="image/png" href="./assets/favicon.png"/>
 </head>
-<body>
+<body class="m-0 h-full text-darkHeaderBgColor bg-darkHeaderColor font-sans">
     <div id="root"></div>
     <script type="module" src="./index.js"></script>
 </body>
